--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 booster (0.11.0-99pika5) lunar; urgency=medium
 
+  * Booster takes over final form
+
+ -- ferreo <harderthanfire@gmail.com>  Wed, 18 Jan 2023 21:48:14 +0000
+
+booster (0.11.0-99pika5) lunar; urgency=medium
+
   * Booster takes over
 
  -- ferreo <harderthanfire@gmail.com>  Wed, 18 Jan 2023 21:48:14 +0000
