--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+booster (0.11.0-99pika11) lunar; urgency=medium
+
+  * LVconsole fix
+
+ -- ferreo <harderthanfire@gmail.com>  Wed, 18 Jan 2023 21:48:14 +0000
+
 booster (0.11.0-99pika10) lunar; urgency=medium
 
   * Libs being shits
