--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+booster (0.11.0-100pika2) pikauwu; urgency=medium
+
+  * Update to pikauwu
+
+ -- ferreo <harderthanfire@gmail.com>  Wed, 18 Jan 2023 21:48:14 +0000
+
 booster (0.11.0-100pika1) lunar; urgency=medium
 
   * Update to pikauwu
