--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+booster (0.11.1.git-101pika1) pika; urgency=medium
+
+  * Pika 4
+
+ -- ferreo <harderthanfire@gmail.com>  Wed, 18 Jan 2023 21:48:14 +0000
+
 booster (0.11.0.git-102pika4) pikauwu; urgency=medium
 
   * Fix LUKs hid issues in newer kernels
