--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+booster (0.11.3.ferreogit-101pika1) pika; urgency=medium
+
+  * Update depends
+
+ -- ferreo <harderthanfire@gmail.com>  Wed, 18 Jan 2023 21:48:14 +0000
+
 booster (0.11.3.git-101pika1) pika; urgency=medium
 
   * Update depends
